miniportugolParser.py
# Generated from miniportugol.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniportugolParser ( Parser ):

    grammarFileName = "miniportugol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'=='", "'&&'", "'||'", "'=!'", "'+'", 
                     "'-'", "'/'", "'INT'", "'String'", "<INVALID>", "'leia'", 
                     "'escreva'", "'se'", "'senao'", "'enquanto'", "'para'", 
                     "'('", "')'", "';'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "LEIA", "ESCREVA", 
                      "SE", "SENAO", "ENQUANTO", "PARA", "AP", "FP", "PV", 
                      "AC", "FC", "IGUAL", "STRING", "ID" ]

    RULE_program = 0
    RULE_cond_op = 1
    RULE_condicao = 2
    RULE_declaracao_variavel = 3
    RULE_comando_escreva = 4
    RULE_comando_ler = 5
    RULE_comando_se = 6
    RULE_comando_senao = 7
    RULE_comando_enquanto = 8
    RULE_comando_definir = 9
    RULE_expr_condicionais = 10
    RULE_expr_aritmeticas = 11
    RULE_tipos_variaveis = 12
    RULE_lista_comandos = 13

    ruleNames =  [ "program", "cond_op", "condicao", "declaracao_variavel", 
                   "comando_escreva", "comando_ler", "comando_se", "comando_senao", 
                   "comando_enquanto", "comando_definir", "expr_condicionais", 
                   "expr_aritmeticas", "tipos_variaveis", "lista_comandos" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    WS=10
    LEIA=11
    ESCREVA=12
    SE=13
    SENAO=14
    ENQUANTO=15
    PARA=16
    AP=17
    FP=18
    PV=19
    AC=20
    FC=21
    IGUAL=22
    STRING=23
    ID=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Declaracao_variavelContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Declaracao_variavelContext,i)


        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def getRuleIndex(self):
            return miniportugolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = miniportugolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==9:
                self.state = 28
                self.declaracao_variavel()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16824320) != 0):
                self.state = 34
                self.lista_comandos()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_condicionais(self):
            return self.getTypedRuleContext(miniportugolParser.Expr_condicionaisContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.ID)
            else:
                return self.getToken(miniportugolParser.ID, i)

        def expr_aritmeticas(self):
            return self.getTypedRuleContext(miniportugolParser.Expr_aritmeticasContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_cond_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_op" ):
                listener.enterCond_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_op" ):
                listener.exitCond_op(self)




    def cond_op(self):

        localctx = miniportugolParser.Cond_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cond_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0):
                self.state = 40
                self.expr_aritmeticas()
                self.state = 41
                self.match(miniportugolParser.ID)


            self.state = 45
            self.expr_condicionais()
            self.state = 46
            self.match(miniportugolParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def cond_op(self):
            return self.getTypedRuleContext(miniportugolParser.Cond_opContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = miniportugolParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condicao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(miniportugolParser.AP)
            self.state = 49
            self.match(miniportugolParser.ID)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 254) != 0):
                self.state = 50
                self.cond_op()


            self.state = 53
            self.match(miniportugolParser.FP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipos_variaveis(self):
            return self.getTypedRuleContext(miniportugolParser.Tipos_variaveisContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.ID)
            else:
                return self.getToken(miniportugolParser.ID, i)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)




    def declaracao_variavel(self):

        localctx = miniportugolParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.tipos_variaveis()
            self.state = 56
            self.match(miniportugolParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 57
                self.match(miniportugolParser.ID)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_escrevaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(miniportugolParser.ESCREVA, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def STRING(self):
            return self.getToken(miniportugolParser.STRING, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_escreva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_escreva" ):
                listener.enterComando_escreva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_escreva" ):
                listener.exitComando_escreva(self)




    def comando_escreva(self):

        localctx = miniportugolParser.Comando_escrevaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comando_escreva)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(miniportugolParser.ESCREVA)
            self.state = 66
            self.match(miniportugolParser.AP)
            self.state = 67
            self.match(miniportugolParser.STRING)
            self.state = 68
            self.match(miniportugolParser.FP)
            self.state = 69
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_lerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEIA(self):
            return self.getToken(miniportugolParser.LEIA, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_ler" ):
                listener.enterComando_ler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_ler" ):
                listener.exitComando_ler(self)




    def comando_ler(self):

        localctx = miniportugolParser.Comando_lerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(miniportugolParser.LEIA)
            self.state = 72
            self.match(miniportugolParser.AP)
            self.state = 73
            self.match(miniportugolParser.ID)
            self.state = 74
            self.match(miniportugolParser.FP)
            self.state = 75
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_seContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(miniportugolParser.SE, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def AC(self):
            return self.getToken(miniportugolParser.AC, 0)

        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def FC(self):
            return self.getToken(miniportugolParser.FC, 0)

        def cond_op(self):
            return self.getTypedRuleContext(miniportugolParser.Cond_opContext,0)


        def comando_senao(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_senaoContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_se

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_se" ):
                listener.enterComando_se(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_se" ):
                listener.exitComando_se(self)




    def comando_se(self):

        localctx = miniportugolParser.Comando_seContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comando_se)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(miniportugolParser.SE)
            self.state = 78
            self.match(miniportugolParser.AP)
            self.state = 79
            self.match(miniportugolParser.ID)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 254) != 0):
                self.state = 80
                self.cond_op()


            self.state = 83
            self.match(miniportugolParser.FP)
            self.state = 84
            self.match(miniportugolParser.AC)
            self.state = 85
            self.lista_comandos()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16824320) != 0):
                self.state = 86
                self.lista_comandos()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(miniportugolParser.FC)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 93
                self.comando_senao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_senaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SENAO(self):
            return self.getToken(miniportugolParser.SENAO, 0)

        def AC(self):
            return self.getToken(miniportugolParser.AC, 0)

        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def FC(self):
            return self.getToken(miniportugolParser.FC, 0)

        def condicao(self):
            return self.getTypedRuleContext(miniportugolParser.CondicaoContext,0)


        def comando_senao(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_senaoContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_senao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_senao" ):
                listener.enterComando_senao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_senao" ):
                listener.exitComando_senao(self)




    def comando_senao(self):

        localctx = miniportugolParser.Comando_senaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando_senao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(miniportugolParser.SENAO)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 97
                self.condicao()


            self.state = 100
            self.match(miniportugolParser.AC)
            self.state = 101
            self.lista_comandos()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16824320) != 0):
                self.state = 102
                self.lista_comandos()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(miniportugolParser.FC)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 109
                self.comando_senao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_enquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(miniportugolParser.ENQUANTO, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def AC(self):
            return self.getToken(miniportugolParser.AC, 0)

        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def FC(self):
            return self.getToken(miniportugolParser.FC, 0)

        def cond_op(self):
            return self.getTypedRuleContext(miniportugolParser.Cond_opContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_enquanto" ):
                listener.enterComando_enquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_enquanto" ):
                listener.exitComando_enquanto(self)




    def comando_enquanto(self):

        localctx = miniportugolParser.Comando_enquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comando_enquanto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(miniportugolParser.ENQUANTO)
            self.state = 113
            self.match(miniportugolParser.AP)
            self.state = 114
            self.match(miniportugolParser.ID)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 254) != 0):
                self.state = 115
                self.cond_op()


            self.state = 118
            self.match(miniportugolParser.FP)
            self.state = 119
            self.match(miniportugolParser.AC)
            self.state = 120
            self.lista_comandos()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16824320) != 0):
                self.state = 121
                self.lista_comandos()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(miniportugolParser.FC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_definirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.ID)
            else:
                return self.getToken(miniportugolParser.ID, i)

        def IGUAL(self):
            return self.getToken(miniportugolParser.IGUAL, 0)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def expr_aritmeticas(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Expr_aritmeticasContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Expr_aritmeticasContext,i)


        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_definir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_definir" ):
                listener.enterComando_definir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_definir" ):
                listener.exitComando_definir(self)




    def comando_definir(self):

        localctx = miniportugolParser.Comando_definirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando_definir)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(miniportugolParser.ID)
            self.state = 130
            self.match(miniportugolParser.IGUAL)
            self.state = 131
            self.match(miniportugolParser.ID)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0):
                self.state = 132
                self.expr_aritmeticas()
                self.state = 133
                self.match(miniportugolParser.ID)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_condicionaisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniportugolParser.RULE_expr_condicionais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_condicionais" ):
                listener.enterExpr_condicionais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_condicionais" ):
                listener.exitExpr_condicionais(self)




    def expr_condicionais(self):

        localctx = miniportugolParser.Expr_condicionaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_condicionais)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_aritmeticasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniportugolParser.RULE_expr_aritmeticas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_aritmeticas" ):
                listener.enterExpr_aritmeticas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_aritmeticas" ):
                listener.exitExpr_aritmeticas(self)




    def expr_aritmeticas(self):

        localctx = miniportugolParser.Expr_aritmeticasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr_aritmeticas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipos_variaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniportugolParser.RULE_tipos_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipos_variaveis" ):
                listener.enterTipos_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipos_variaveis" ):
                listener.exitTipos_variaveis(self)




    def tipos_variaveis(self):

        localctx = miniportugolParser.Tipos_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipos_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_comandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando_escreva(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_escrevaContext,0)


        def comando_ler(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_lerContext,0)


        def comando_se(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_seContext,0)


        def comando_enquanto(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_enquantoContext,0)


        def comando_definir(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_definirContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_lista_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_comandos" ):
                listener.enterLista_comandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_comandos" ):
                listener.exitLista_comandos(self)




    def lista_comandos(self):

        localctx = miniportugolParser.Lista_comandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_lista_comandos)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.comando_escreva()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.comando_ler()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.comando_se()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.comando_enquanto()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 152
                self.comando_definir()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





